--- a/event_rule_lambda.yml
+++ b/event_rule_lambda.yml
@@ -62,11 +62,11 @@ Resources:
         detail:
           EventCategories:
             - creation
-        # detail-type:
-        #   - RDS DB Snapshot Event
-        # detail:
-        #   eventName:
-        #     - createDBSnapshot
+        detail-type:
+          - RDS DB Snapshot Event
+        detail:
+          eventName:
+            - createDBSnapshot
           SourceType: 
             - SNAPSHOT
           EventID: 
