--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,8 +3,9 @@ phases:
   install:
     runtime-versions:
         python: 3.8
-    commands:
-      - apt install -y jq
+    # jq is also installed
+    # commands:
+    #   - apt install -y jq
   build:
     commands:
       - sam build
