--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,5 +1,10 @@
 version: 0.2
 phases:
+  pre_build:
+    commands:
+      - yarn
+      - GIT_BRANCH=${CODEBUILD_WEBHOOK_HEAD_REF:-$CODEBUILD_SOURCE_VERSION}
+      - export GIT_BRANCH=$(echo $GIT_BRANCH | sed "s|branch/||" | sed "s|/|-|g" | sed "s|refs-heads-||")
   install:
     runtime-versions:
         python: 3.8
