--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,8 +13,8 @@ phases:
     #   - apt install -y jq
   build:
     commands:
-      - export GIT_BRANCH=$CODEBUILD_WEBHOOK_HEAD_REF
-      - echo Env=$GIT_BRANCH 
+      #- export GIT_BRANCH=$CODEBUILD_WEBHOOK_HEAD_REF
+      - echo $GIT_BRANCH 
       - sam build
   post_build:
     commands:
