--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   build:
     commands:
       - echo $GIT_BRANCH 
-      - sam build --template template.yaml
+      - sam build
   post_build:
     commands:
-      - sam deploy -template template.yaml
+      - sam deploy
